# joplin-smart-search

./: .gitignore  CLAUDE.md  DESIGN.md  README.md  build-linux.sh  build-windows.sh  index.html  install-desktop.sh  installer.nsi  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
docs/: building-windows.md  design.md  security-audit.md
src/: App.tsx  components.json  store.ts  styles.css  types.ts
src-tauri/: Cargo.toml  package-lock.json  package.json  tauri.conf.json  vite.config.ts
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  db.rs  embeddings.rs  index.rs  lib.rs  main.rs  types.rs  watcher.rs
src/components/: DetailPanel.tsx  IndexingScreen.tsx  MainLayout.tsx  ResultsList.tsx  SearchBar.tsx  SetupScreen.tsx  StatusIndicator.tsx
src/lib/: renderMarkdown.ts
