[package]
name = "joplin-smart-search"
version = "0.1.0"
edition = "2021"

[lib]
name = "joplin_smart_search"
path = "src/lib.rs"

[[bin]]
name = "joplin-smart-search"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = ["wry"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "time", "sync", "macros"] }
rusqlite = { version = "0.32", features = ["bundled"] }
fastembed = "4"
ruvector-core = "2.0.4"
tauri-plugin-dialog = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.3"
open = "5"

[dev-dependencies]
tauri = { version = "2", features = ["devtools"] }

[features]
default = []

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
